# news-extractor

./: Taskfile.yml  duties.py  playground.ipynb  pyproject.toml
scripts/: diagnose_pdf.py
src/news_extractor/: __init__.py  table_finder.py
tests/: test_article_parser.py  test_news_pdf_extractor.py  test_pdf_text_extractor.py  test_table_finder.py
