[project]
name = "news-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kugeleis", email = "kugeleis@wbrief.de" }
]
requires-python = ">=3.14"
dependencies = [
    "pypdf2>=3.0.1",
]

[project.scripts]
news-extractor = "news_extractor:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
