[project]
name = "news-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kugeleis", email = "kugeleis@wbrief.de" }
]
requires-python = ">=3.12.0"
dependencies = [
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pypdf2>=3.0.1",
    "rich>=14.2.0",
]

[project.scripts]
news-extractor = "news_extractor:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nb-clean>=4.0.1",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
