[project]
name = "news-extractor"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kugeleis", email = "kugeleis@wbrief.de" }
]
requires-python = ">=3.12.0"
dependencies = [
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    # pypdf2 removed — using pdfplumber for text + table extraction
    "rich>=14.2.0",
]

[project.scripts]
news-extractor = "news_extractor:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "duty>=1.6.3",
    "ipykernel>=7.1.0",
    "nb-clean>=4.0.1",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
        "bump-my-version>=1.2.4",
]

[tool.bumpversion]
current_version = "0.2.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
regex = false
